static/css/index.css
body {
    font-family: 'Signika', sans-serif;
}

h1 {
    margin: 20px 0 0 20px;
}

input {
    display: inline-block;
    margin: 20px 0 0 20px;
}

.container {
    display: inline-block;
}

.category-ratings {
    margin: 20px 0 0 20px;
}

.header {
    font-weight: 700;
}

.rating-cell {
    text-align: right;
}

.category-cell {
    font-style: italic;
}

.wheel {
    display: inline-block;
}
.click-circle {
    fill: #FFF;
    stroke: #666;
    stroke-width: 1px;
}

.axis text {
    font-size: 16px;
}

.axis line,
.rating-circle {
    fill: none;
    stroke: #777;
    stroke-dasharray: 1,4;
}

.axis :last-of-type .rating-circle {
    stroke: #333;
    stroke-dasharray: none;
    stroke-width: 2px;
}

.line {
    opacity: 0.7;
    stroke-width: 2px;
    stroke-opacity: 1;
}

